@@ -24,6 +24,7 @@ import io.cloudbeaver.model.app.BaseServletApplication;
 import io.cloudbeaver.model.app.ServletAuthApplication;
 import io.cloudbeaver.model.app.ServletAuthConfiguration;
 import io.cloudbeaver.model.app.ServletSystemInformationCollector;
+import io.cloudbeaver.model.cli.CloudBeaverInstanceServer;
 import io.cloudbeaver.model.config.CBAppConfig;
 import io.cloudbeaver.model.config.CBServerConfig;
 import io.cloudbeaver.registry.WebDriverRegistry;
@@ -32,6 +33,7 @@ import io.cloudbeaver.registry.WebServiceRegistry;
 import io.cloudbeaver.server.jetty.CBJettyServer;
 import io.cloudbeaver.service.DBWServiceInitializer;
 import io.cloudbeaver.service.DBWServiceServerConfigurator;
+import io.cloudbeaver.service.security.CBEmbeddedSecurityController;
 import io.cloudbeaver.service.session.CBSessionManager;
 import io.cloudbeaver.utils.WebDataSourceUtils;
 import org.eclipse.core.runtime.Platform;
@@ -48,7 +50,6 @@ import org.jkiss.dbeaver.model.auth.SMCredentialsProvider;
 import org.jkiss.dbeaver.model.connection.DBPDriver;
 import org.jkiss.dbeaver.model.data.json.JSONUtils;
 import org.jkiss.dbeaver.model.impl.app.BaseApplicationImpl;
-import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.security.SMAdminController;
 import org.jkiss.dbeaver.model.security.SMConstants;
 import org.jkiss.dbeaver.model.security.SMObjectType;
@@ -86,7 +87,6 @@ public abstract class CBApplication<T extends CBServerConfig>
      */
     private static final long CONFIGURATION_MODE_SESSION_IDLE_TIME = 60 * 60 * 1000 * 24 * 7;
 
-
     static {
         Log.setDefaultDebugStream(System.out);
     }
@@ -119,6 +119,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         this.homeDirectory = new File(initHomeFolder());
     }
 
+    @Nullable
     public String getServerURL() {
         return getServerConfiguration().getServerURL();
     }
@@ -138,15 +139,18 @@ public abstract class CBApplication<T extends CBServerConfig>
         return getServerConfiguration().getServerName();
     }
 
+    @NotNull
     public String getRootURI() {
         return getServerConfiguration().getRootURI();
     }
 
+    @NotNull
     public String getServicesURI() {
         return getServerConfiguration().getServicesURI();
     }
 
 
+    @NotNull
     public Path getHomeDirectory() {
         return homeDirectory.toPath();
     }
@@ -170,10 +174,12 @@ public abstract class CBApplication<T extends CBServerConfig>
      * @return max session idle time from server configuration, may differ from {@link #getMaxSessionIdleTime()}
      */
 
+    @NotNull
     public CBAppConfig getAppConfiguration() {
         return getServerConfigurationController().getAppConfiguration();
     }
 
+    @NotNull
     public T getServerConfiguration() {
         return getServerConfigurationController().getServerConfiguration();
     }
@@ -199,6 +205,11 @@ public abstract class CBApplication<T extends CBServerConfig>
 
     @Override
     protected void startServer() {
+        try {
+            createInstanceServer();
+        } catch (Exception e) {
+            log.error("Error initializing instance server", e);
+        }
         try {
             if (!loadServerConfiguration()) {
                 return;
@@ -227,10 +238,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         Location instanceLoc = Platform.getInstanceLocation();
         try {
             if (!instanceLoc.isSet()) { // always false?
-                URL wsLocationURL = new URL(
-                    "file",  //$NON-NLS-1$
-                    null,
-                    getWorkspaceDirectory().toAbsolutePath().toString());
+                URL wsLocationURL = getWorkspaceDirectory().toUri().toURL();
                 instanceLoc.set(wsLocationURL, true);
             }
         } catch (Exception e) {
@@ -273,7 +281,8 @@ public abstract class CBApplication<T extends CBServerConfig>
             determineLocalAddresses();
             log.debug("\tLocal host addresses:");
             for (InetAddress ia : localInetAddresses) {
-                log.debug("\t\t" + ia.getHostAddress() + " (" + ia.getCanonicalHostName() + ")");
+                log.debug("\t\t" + ia.getHostAddress() +
+                    (Objects.equals(ia.getHostAddress(), ia.getCanonicalHostName()) ? "" : (" (" + ia.getCanonicalHostName() + ")")));
             }
         }
         {
@@ -292,7 +301,8 @@ public abstract class CBApplication<T extends CBServerConfig>
         try {
             initializeServer();
         } catch (DBException e) {
-            log.error("Error initializing server", e);
+            log.error("Error initializing " + systemInformationCollector.getProductName(), e);
+            shutdown();
             return;
         }
 
@@ -300,6 +310,7 @@ public abstract class CBApplication<T extends CBServerConfig>
             initializeSecurityController();
         } catch (Exception e) {
             log.error("Error initializing database", e);
+            shutdown();
             return;
         }
 
@@ -313,11 +324,6 @@ public abstract class CBApplication<T extends CBServerConfig>
                 grantAnonymousAccessToConnections(appConfiguration, CBConstants.ADMIN_AUTO_GRANT);
             }
             grantPermissionsToConnections();
-        }
-        try {
-            this.systemInformationCollector.collectInternalDatabaseUseInformation();
-        } catch (DBException e) {
-            log.error("Error collecting system information", e);
         }
 
         eventController.scheduleCheckJob();
@@ -346,6 +352,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         getAppConfiguration().setEnabledFeatures(enabledFeatures.toArray(new String[0]));
     }
 
+    @NotNull
     protected ServletSystemInformationCollector<?> createSystemInformationCollector() {
         return new ServletSystemInformationCollector<>(this);
     }
@@ -499,10 +506,20 @@ public abstract class CBApplication<T extends CBServerConfig>
 
     protected void shutdown() {
         log.debug("Cloudbeaver Server is stopping"); //$NON-NLS-1$
+
+        try {
+            if (securityController instanceof CBEmbeddedSecurityController<?> embeddedSecurityController) {
+                embeddedSecurityController.shutdown();
+            }
+        } catch (Exception e) {
+            log.error(e);
+        }
+
+        eventController.scheduleCheckJob();
     }
 
     @Override
-    public String getInfoDetails(DBRProgressMonitor monitor) {
+    public String getInfoDetails() {
         return "";
     }
 
@@ -524,6 +541,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return getServerConfigurationController().getLocalHostAddress();
     }
 
+    @NotNull
     public List<InetAddress> getLocalInetAddresses() {
         return localInetAddresses;
     }
@@ -672,6 +690,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return null;
     }
 
+    @NotNull
     public CBSessionManager getSessionManager() {
         if (sessionManager == null) {
             sessionManager = createSessionManager();
@@ -696,6 +715,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return List.of();
     }
 
+    @NotNull
     @Override
     public WSEventController getEventController() {
         return eventController;
@@ -777,17 +797,18 @@ public abstract class CBApplication<T extends CBServerConfig>
         initActions.remove(actionId);
     }
 
+    @NotNull
     public Map<String, String> getInitActions() {
         return Map.copyOf(initActions);
     }
 
+    @NotNull
     @Override
     public WebServerConfig getWebServerConfig() {
         return new CBWebServerConfig(this);
     }
 
     @NotNull
-    @Override
     public ServletSystemInformationCollector<?> getSystemInformationCollector() {
         return systemInformationCollector;
     }
@@ -799,5 +820,9 @@ public abstract class CBApplication<T extends CBServerConfig>
     @Nullable
     public <T> T getApplicationContextValue(@NotNull String key) {
         return (T) applicationContext.get(key);
+    }
+
+    protected CloudBeaverInstanceServer createInstanceServer() throws IOException {
+        return new CloudBeaverInstanceServer();
     }
 }
